--- a/_posts/2020-05-03-test.md
+++ b/_posts/2020-05-03-test.md
@@ -4,7 +4,7 @@ tags: [video]
 
 # Testing the blog posts title
 
-Here's the first paragraph for testing
+Here's the first paragraph for testing: {{ site.baseurl }} - however if you want to really include URL, use {{ site.url }} - for show!
 
 ![Silicon Valley is disrupting everything but the way they work](/img/github.jpg)
 
