--- a/_posts/2020-05-03-test.md
+++ b/_posts/2020-05-03-test.md
@@ -2,7 +2,7 @@
 tags: [video]
 ---
 
-# Testing the blog posts title
+# Testing the blog posts
 
 Here's the first paragraph for testing: {{ site.baseurl }} - however if you want to really include URL, use {{ site.url }} - for show!
 
