--- a/_posts/2020-05-03-test.md
+++ b/_posts/2020-05-03-test.md
@@ -2,9 +2,9 @@
 tags: [video]
 ---
 
-# Testing the blog posts
+# Testing the blog posts H1
 
-Here's the first paragraph for testing: {{ site.baseurl }} - however if you want to really include URL, use {{ site.url }} - for show!
+Here's the first paragraph for testing:
 
 ![Silicon Valley is disrupting everything but the way they work](/img/github.jpg)
 
