H1 fixes and tests

--- a/_posts/2020-05-01-testing.md
+++ b/_posts/2020-05-01-testing.md
@@ -1,7 +1,4 @@
----
----
-
-# I do not really understand why it doesn't work...
+# I think I understand why it doesn't work...
 
 It should, but it doesn't.
 
