Moved search to just home page for now

--- a/_posts/2020-05-03-test.md
+++ b/_posts/2020-05-03-test.md
@@ -2,7 +2,7 @@
 tags: [video]
 ---
 
-# Testing the blog here now...
+# Testing the blog here now and forever...
 
 Here's the first paragraph for testing:
 
