--- a/pl/_posts/2020-04-04-kwiecien.md
+++ b/pl/_posts/2020-04-04-kwiecien.md
@@ -1,7 +1,7 @@
 ---
-permalink: /pl/:path
+permalink: /pl/:name
 ---
 
-# Kwiecień, plecień bo przeplata...
+# Kwiecień to plecień bo przeplata...
 
 Trochę zimy trochę lata :-)
