--- a/pl/_posts/2020-05-02-witam.md
+++ b/pl/_posts/2020-05-02-witam.md
@@ -2,6 +2,6 @@
 permalink: /pl/:slug
 ---
 
-# To jest wpis po Polsku!
+# To jest wpis po Polskiemu
 
 I on powinien być tylko i wyłącznie na Polskim blogu!
