--- a/pl/_posts/2020-05-02-witam.md
+++ b/pl/_posts/2020-05-02-witam.md
@@ -1,7 +1,7 @@
 ---
-permalink: /pl/:slug
+permalink: /pl/:title
 ---
 
-# To jest wpis po Polsku /pl/
+# To jest wpis po Polsku tutaj
 
 I on powinien być tylko i wyłącznie na Polskim blogu!
