PL more experiments

--- a/pl/_posts/2020-05-02-witam.md
+++ b/pl/_posts/2020-05-02-witam.md
@@ -1,7 +1,3 @@
----
-permalink: /pl/:title
----
-
-# To jest wpis po Polsku tutaj
+# To jest wpis po Polsku tam
 
 I on powinien być tylko i wyłącznie na Polskim blogu!
