--- a/404.md
+++ b/404.md
@@ -1,15 +1,20 @@
 ---
 permalink: /404.html
+lang: en
 ---
 
-# Sorry! Wrong link...
+# 404: Sorry! Wrong link...
 
-## Search for stuff here:
+## 🌎 Search for on my global blog here:
 
 {% include search.html %}
 
 <br>
 
-## Or browse the [archives](/archive)
+## Or browse the [archives from 2008 until now](/archive)
 
 Or go back [to the home page](/)
+
+## 🇵🇱 Zobacz może [moje artykuły i treści po Polsku](/pl/)
+
+## 🇪🇸 Mira mis [artículos en español](/es/)
