Testing blog posts and uploading first images and new posts list for tags

--- a/en/_posts/2020-05-03-test.md
+++ b/en/_posts/2020-05-03-test.md
@@ -1,12 +1,13 @@
 ---
 tags: [video]
+img: "github.jpg"
 ---
 
 # Testing the blog here now and forever...
 
-Here's the first paragraph for testing:
+Here's the first paragraph for testing and I’m a CEO of a productivity app so I really liked the SV entrepreneurial vibe. But when I talked to other founders and VCs over there I quickly found out that their approach to modern work is.. not really that modern.
 
-![Silicon Valley is disrupting everything but the way they work](/img/github.jpg)
+![{{ page.title }}](/img/{{ page.img }})
 
 <!--More-->
 
