--- a/en/_posts/2020-05-20-bday.md
+++ b/en/_posts/2020-05-20-bday.md
@@ -1,3 +1,12 @@
+---
+tags: [webinar]
+img: "forty1.jpg"
+---
+
 # Happy Birthday to me!
 
 Yay! Forty one!
+
+<!--More-->
+
+![{{ page.title }}](/img/{{ page.img }})
