updates to now post

--- a/en/_posts/2020-06-26-now200626.md
+++ b/en/_posts/2020-06-26-now200626.md
@@ -1,5 +1,5 @@
 ---
-title: "What am I doing now, the week of June 26, 2020?"
+title: "What I'm doing as of June 26, 2020"
 vid: "w2L41TRhc-0"
 cover: michael.team.now.jpg
 tags: [now]
