Updates to the site and new blog post on webinar

--- a/en/_posts/2020-06-26-now200626.md
+++ b/en/_posts/2020-06-26-now200626.md
@@ -7,6 +7,8 @@ tags: [now]
 
 I'm in my home office grounded by the “coronavirus”:
 
+<!--More-->
+
 ## Working on [Nozbe][]
 
 * Just lead my first webinars in a long time - had so much fun! (watch it below!)
