Final fixes to now page
Now it should work really great

--- a/en/_posts/2020-06-26-now200626.md
+++ b/en/_posts/2020-06-26-now200626.md
@@ -1,13 +1,15 @@
 ---
 title: "What I'm doing as of June 26, 2020"
 vid: "w2L41TRhc-0"
-cover: michael.team.now.jpg
+img: michael.team.now.jpg
 tags: [now]
 ---
 
 I'm in my home office grounded by the “coronavirus”:
 
 <!--More-->
+
+![{{ page.title }}](/img/{{ page.img }})
 
 ## Working on [Nozbe][]
 
