new blog post launching michael.team

--- a/pl/_posts/2020-07-01-mobilna.md
+++ b/pl/_posts/2020-07-01-mobilna.md
@@ -6,7 +6,7 @@ img: mobilna2.jpg
 
 # Przyszłość jest mobilna, a jak w to wpisuje się Twój sposób działania?
 
-> Ten felieton jest z lipcowego wydania [iMagazine](https://imagazine.pl)
+> Ten felieton jest z wydania z {% include lang.date.html date="2020-07-01" month=true %} [iMagazine](https://imagazine.pl)
 
 Pandemia zmienia świat. Nie tylko bezpośrednio, zarażając ludzi wstrętną chorobą, ale też pośrednio, zmieniając podejście do pracy, do tego skąd działamy a także za pomocą jakich narzędzi jest nam dane pracować.
 
