Improvements to now with no JS support

--- a/en/_posts/2020-06-26-now200626.md
+++ b/en/_posts/2020-06-26-now200626.md
@@ -1,5 +1,5 @@
 ---
-title: "What I'm doing as of June 26, 2020"
+title: "What I'm doing as of June 26"
 vid: "w2L41TRhc-0"
 img: michael.team.now.jpg
 tags: [now]
