--- a/en/_posts/2020-07-26-css.md
+++ b/en/_posts/2020-07-26-css.md
@@ -3,7 +3,7 @@ img: css.jpg
 tags: [blogging]
 ---
 
-# Small/big font and the magic of Sass and Css on my blog
+# Small/big font and the magic of Sass and CSS on my blog
 
 One of my favorite parts of this new blog project is re-learning new/old technologies. At [Nozbe][n] I don't code anymore but programming still brings me joy so over here I get to learn modern JavaScript and CSS and HTML5 again. It's cool to discover that most modern browsers support the latest technologies and it's also exciting to see how the web conventions have developed over the years. Today let's talk about styles, CSS and Sass.
 
@@ -50,6 +50,10 @@ It's difficult at first but later it just changes the way you describe styles!
 When I was designing websites years ago everything was pixel perfect but now it's all about accessibility so the idea is to keep font sizes relative so I'm using "em" and "rem" all the time. This way people with eyesight problems can easily increase the size of text on my entire website.
 
 "Rem" is "root em" and it makes sure that nested items don't get bigger. Like when you have a size defined for a list and then add a list within the list and you want to keep it the same size.
+
+## There's an app for iPad that helps me with styles!
+
+I'm mostly working on the iPad and there's no "developer console" in iOS Safari, however there is a brilliant iOS app that does just that and you can see it on my screenshot above, it's called [Inspect Browser](https://apps.apple.com/us/app/inspect-browser/id1203594958) and it's fantastic for debugging and testing CSS and HTML.
 
 ## Why do I care so much and when do I learn all this?
 
