--- a/pl/_posts/2020-07-01-mobilna.md
+++ b/pl/_posts/2020-07-01-mobilna.md
@@ -8,7 +8,7 @@ img: mobilna2.jpg
 
 {% include lang.date.html date="2020-07-01" month=true %}
 
-> Ten felieton jest z wydania z {{ langdate }} [iMagazine](https://imagazine.pl)
+> Ten felieton jest z wydania z {{ langdate }} [iMagazine](https://imagazine.pl){:target='_blank'}
 
 Pandemia zmienia świat. Nie tylko bezpośrednio, zarażając ludzi wstrętną chorobą, ale też pośrednio, zmieniając podejście do pracy, do tego skąd działamy a także za pomocą jakich narzędzi jest nam dane pracować.
 
