fixed szaffi post

--- a/en/_posts/2020-07-25-now200725.md
+++ b/en/_posts/2020-07-25-now200725.md
@@ -21,7 +21,7 @@ I'm still in my home office grounded by the “coronavirus”:
 
 * Finally [launched this my site](/new)
 * Started writing [NoOffice](https://NoOffice.org) book - details in video below!
-* kinda [helped my Polish friend (in photo) get to 100k sold books](/szaffi)
+* kinda [helped my Polish friend (in photo) get to 100k sold books](/pl/szaffi)
 
 ## … and privately?
 
