fixes to recent blog post

--- a/en/_posts/2020-08-06-10chapters.md
+++ b/en/_posts/2020-08-06-10chapters.md
@@ -3,9 +3,9 @@ img: 10chapters.jpg
 tags: [books,nooffice]
 ---
 
-# Check out the first 10 chapters of #NoOffice book and let me WDYT
+# Check out first 10 chapters of #NoOffice book and tell me WDYT
 
-Thanks to my decision not to work on [Nozbe][n] for the entire month of August (see the [recent update](/now200801/) of my [now page](/now)) I’m on a roll and just today I wrote the 10th chapter of my new book [#NoOffice](https://NoOffice.org/). Why I’m writing this book? Because I want more people to know that *"Work is not a place to go to, it's a thing that you do!"* and I started with these chapters:
+Thanks to my decision NOT to work on [Nozbe][n] for the entire month of August (see the [recent update](/now200801/) of my [now page](/now)) I’m on a roll and just today I wrote the 10th chapter of my new book [#NoOffice](https://NoOffice.org/). Why I’m writing this book? Because I want more people to know that *"Work is not a place to go to, it's a thing that you do!"* and I started with these chapters:
 
 ![{{ page.title }}](/img/{{ page.img }})
 
@@ -17,15 +17,15 @@ In [the intro](https://nooffice.org/book/intro) I'm explaining how the modern wo
 
 In [Chapter 1 - I have a dream](https://nooffice.org/book/dream) - I write about my beginnings - how I studied in three countries, wrote my master thesis on "teleworking and virtual companies" and set up my business from the get go as a quasi-nomadic enterprise.
 
-Later in [Chapter 2 - I have a team](https://nooffice.org/book/team) - I explain how my team grew and how I decided not to rent an office for it. And I give a few notable examples of people who joined my team because we were truly all-remote.
+Later in [Chapter 2 - I have a team](https://nooffice.org/book/team) - I explain how my team grew and how I decided not to rent an office for it. And I give a few notable examples of people who joined my team mainly because we were truly all-remote.
 
-In [Chapter 3 - I have a future](https://nooffice.org/book/future) - I'm asking if remote working is just a future for my company or is a future of all work?
+In [Chapter 3 - I have a future](https://nooffice.org/book/future) - I'm asking if remote working is just a future for my company or is a future of all businesses?
 
 ## Part 1 of the book - or how people are using their offices wrong!
 
 Yes [I start with an intro to part 1](https://nooffice.org/book/one) where I explain how "having an office" can create counter-productive work habits. It's true. People should be aware of that!
 
-Anyway, the first part of the book is about embracing modern way of working and it applies to all companies, especially those with offices.
+Anyway, the first part of the book is about embracing modern way of working. These chapters apply to all companies, especially those with offices.
 
 [I start with the importance of focus in Chapter 4](https://nooffice.org/book/focus), later I highlight the habit of [writing stuff down for everyone on the team in Chapter 5](https://nooffice.org/book/write).
 
@@ -43,6 +43,8 @@ I've got 7 more chapters to write in part 1 of the book. [You can check the outl
 
 Thanks for your support. The book is written [completely open-source](https://NoOffice.org/license) and you can read each chapter just after I've written it. So do [let me know what you think!](/contact).
 
-P.S. I wanted to write this book for a long time. Just checked, I announced [writing #NoOffice book back in July of 2015](https://sliwinski.com/noofficebook) so just a little over 5 years ago. This is a Finally with a capital "F". Finally I'm writing this. Finally you'll be able to read it. How do you like my progress so far?
+P.S. I wanted to write this book for a long time. Just checked, I announced [writing #NoOffice book back in July of 2015](https://sliwinski.com/noofficebook) so just a little over 5 years ago. This is a Finally with a capital "F". 
+
+Finally I'm writing this. Finally you'll be able to read it. How do you like my progress so far?
 
 [n]: https://Nozbe.com/
