--- a/pl/_posts/2020-02-01-wedwoje.md
+++ b/pl/_posts/2020-02-01-wedwoje.md
@@ -60,7 +60,7 @@ Przeglądamy kalendarz na ten rok:
 
 Takie sprawdzenie kalendarza już nam daje pewien obraz naszego roku - dzieki temu zyskujemy wstępne pojęcie o tym, co nas czeka i jakie mamy zasoby czasowe na nasze plany i cele.
 
-## Krok 2 - rozmawiamy o naszych karierach zawodowych
+### Krok 2 - rozmawiamy o naszych karierach zawodowych
 
 Kiedy ogarniemy kalendarz, łatwiej rozmawiać o naszych karierach zawodowych… zanim przejdziemy do spraw prywatnych: celów rodzinnych czy osobistych.
 
@@ -68,19 +68,19 @@ Choć każda osoba z pary wie mniej więcej, co się dzieje u drugiej w pracy, 
 
 Jak pisałem miesiąc temu, jestem fanem upraszczania rzeczy, więc w kwestiach finansowych też mamy proste rozwiązanie: wszystkie pieniądze, jakie zarabiamy, są wspólne. Mamy jeden majątek. Dlatego decyzje zakupowe i finansowe też podejmujemy razem. Niezależnie od tego, jak to jest u Was, warto tutaj porozmawiać o tym, ile zarabiamy, ile planujemy zarabiać i jaki to będzie miało wpływ na budżet domowy i zakupy indywidualne. Sprawdzamy stan naszych kont, oszczędności i zastanawiamy się, jak lepiej lub inaczej możemy podejść do zarządzania pieniędzmi i oszczędzania.
 
-## Krok 4 - cele fitnessowe i pozostałe cele indywidualne
+### Krok 3 - cele fitnessowe i pozostałe cele indywidualne
 
 Oboje z żoną uprawiamy sport. Ja startuję dwa razy w roku w triathlonie olimpijskim (pływanie, rower i bieganie) i grywam w tenisa. Żona biega oraz uprawia pilates. Rozmawiamy o tym, jak często chcemy uprawiać nasze sporty, jaki to ma wpływ na nasze życie rodzinne i jak możemy się wzajemnie wspierać i motywować, aby regularnie ćwiczyć i być w formie. Z jednej strony szukamy zakresów, w których możemy sobie pomagać (np. "ja zostanę z dziećmi w niedzielę rano, a ty pobiegaj"), a z drugiej uczciwie zwracamy uwagę na to, aby żadne z nas nie "wkręciło się" w dany sport i nie uprawiało go kosztem życia rodzinnego.
 
 Przy okazji sportu rozmawiamy o nowych hobby i rzeczach, które nas aktualnie fascynują. Czasami odkrywamy, że jest coś, co możemy zrobić razem, a często jest tak, iż jednej osobie na czymś wybitnie zależy, a druga nawet nie zdawała sobie z tego sprawy!
 
-## Krok 5 - rozmowy o podróżach i wakacjach
+### Krok 4 - rozmowy o podróżach i wakacjach
 
 Rozmowa o hobby naturalnie prowadzi nas do rozmów o naszej wspólnej pasji - podróżowaniu. Ustalamy, dokąd chcielibyśmy pojechać w tym roku, na co możemy sobie pozwolić, a na co nie (zarówno finansowo jak i czasowo). Gdzie chcemy pojechać całą rodziną, a gdzie tylko we dwoje (i czy mamy taką możliwość).
 
 Ta rozmowa to miła przerwa po dosyć trudnych dyskusjach o karierze i pieniądzach. Pozwala nam sobie pomarzyć, pojeździć palcem po mapie i dowiedzieć się, czy jest jakieś miejsce, w które ktoś z nas chce bardzo pojechać.
 
-## Krok 6 - czas na rozmowy o naszej rodzinie
+### Krok 5 - czas na rozmowy o naszej rodzinie
 
 Po wirtualnej wyprawie do ciepłych krajów, czas, aby zejść na ziemię i zastanowić się, jak wygląda nasze życie rodzinne.
 
@@ -91,7 +91,7 @@ Po wirtualnej wyprawie do ciepłych krajów, czas, aby zejść na ziemię i zast
 
 Przy tej okazji też wracamy do rozmów o podróżach, sprawdzamy znowu kalendarz oraz patrzymy na finanse. Analizujemy, czy są przed nami jakieś większe wydatki rodzinne - remont, samochód itp.? Czy jest coś do kupienia, co mogłoby mieć wpływ na jakość naszego życia rodzinnego?
 
-## Krok 7 - dochodzimy do spraw osobistych
+### Krok 6 - dochodzimy do spraw osobistych
 
 Jesteśmy już rozgrzani i gotowi do rozmowy o tym, co z nami dalej jako parą.
 
@@ -105,7 +105,7 @@ Z doświadczenia widzę, że te tematy już się pojawiają podczas rozmów o wc
 
 Przy okazji rozmawiamy również o przyjaciołach. Spisujemy sobie listę najbliższych znajomych i rodziny, zastanawiając się, z kim chcemy utrzymać relacje, z kim wzmocnić, a kogo zaniedbaliśmy.
 
-## Krok podsumowujący - jak ma wyglądać nasz tydzień? Kolejne miesiące? Rok?
+### Krok 7 podsumowujący - jak ma wyglądać nasz tydzień? Kolejne miesiące? Rok?
 
 Kiedy cele są już wypisane, motywacje i inne tematy przerobione, czas na część praktyczną. Wracamy do kalendarza i przeglądamy, jak wygląda nasz tydzień.
 
