fix right slashes

--- a/en/_posts/2020-08-13-right.md
+++ b/en/_posts/2020-08-13-right.md
@@ -24,38 +24,38 @@ Just let's study the lyrics of this particular song. They are really powerful.
 
 Just like Anna, we find ourselves very often in a dark place without any apparent way out:
 
-> I've seen dark before, but not like this
-> This is cold, this is empty, this is numb
-> The life I knew is over; the lights are out
+> I've seen dark before, but not like this\\
+> This is cold, this is empty, this is numb\\
+> The life I knew is over; the lights are out\\
 > Hello darkness: I'm ready to succumb
 
 ### We must go on, but how?
 
 We feel deep inside we cannot give up just yet:
 
-> You are lost, hope is gone
-> But you must go on
+> You are lost, hope is gone\\
+> But you must go on\\
 > And do the next right thing
 
 ### The key is to take a small step in the right direction
 
 Just a small step, just the *next right thing*:
 
-> Just do the next right thing
-> Take a step, step again
-> It is all that I can to do
+> Just do the next right thing\\
+> Take a step, step again\\
+> It is all that I can to do\\
 > **The next right thing**
 
 ### Don't worry when the future seems too overwhelming...
 
 It's very often too hard to wrap our head around all that the future will bring. Especially now with the COVID-19 pandemic that we don't know when it'll fade:
 
-> I won't look too far ahead
-> It's too much for me to take
-> But break it down to this next breath, this next step
+> I won't look too far ahead\\
+> It's too much for me to take\\
+> But break it down to this next breath, this next step\\
 > **This next choice is one that I can make**
 
-It reminds me of the famous David Allen quote from the book that inspired me to build [Nozbe][n], *Getting Things Done: The Art of Stress-Free Productivity*, where he kept asking the same question over and over: "What's the next physical action to move this project forward?"
+It reminds me of the famous David Allen quote from the book that inspired me to build [Nozbe][n], *Getting Things Done: The Art of Stress-Free Productivity*, where he kept asking the same question over and over: "*What's the next physical action to move this project forward?*"
 
 ## We all need to step up now!
 
@@ -75,8 +75,8 @@ But we all can do the *next right thing* today:
 
 These are all small steps, but according to Anna that's the best start:
 
-> When it's clear that everything will never be the same again
-> Then I'll make the choice to hear that voice
+> When it's clear that everything will never be the same again\\
+> Then I'll make the choice to hear that voice\\
 > And **do the next right thing**
 
 ## Let's do the next right thing
