--- a/en/_posts/2020-08-01-now200801.md
+++ b/en/_posts/2020-08-01-now200801.md
@@ -1,11 +1,11 @@
 ---
 title: "What I'm doing as of August 1"
 vid: "uq2xwFTrJGw"
-img: once-a-week.jpg
+img: nooffice-writing.jpg
 tags: [now]
 ---
 
-I'm taking the month of August off for well-deserved vacation:
+I'm taking the month off in August for a well-deserved vacation:
 
 <!--More-->
 
@@ -20,12 +20,12 @@ I'm taking the month of August off for well-deserved vacation:
 ## … and I'm 100% focused on writing my upcoming book:
 
 * Writing [NoOffice](https://NoOffice.org) book - details in video below! I'm aiming at around 1500 words per day.
-* Already wrote first 7 chapters, [you can read my drafts online for free](https://NoOffice.org/book/)
+* Already wrote first chapters, [you can check progress and read my drafts online for free](https://NoOffice.org/book/)
 * Will blog here and check email only [once a week](/once-a-week)
 
 ## … and privately?
 
-* When spending the rest of my vacations with my family: Ewelina, my wife of 15 years and my 3 daughters: Milena (11), Emilia (7) and Liliana (just turned 4!)
+* Spending the rest of my vacations with my family: Ewelina, my wife of 15 years and my 3 daughters: Milena (11), Emilia (7) and Liliana (just turned 4!)
 
 {% include video.html id=page.vid %}
 
