update ipad with benefits

--- a/en/_posts/2020-08-20-ipad.md
+++ b/en/_posts/2020-08-20-ipad.md
@@ -51,6 +51,21 @@ I spend the first half of August 2020 traveling with my family. We were living i
 
 > iPad is a real computer. And it's a delightful one at that. I can't imagine my work without it.
 
+## What makes the iPad so much better against a traditional computer?
+
+In no particular order, these things stand out:
+
+* **It's super light**, only 600 grams, small at 11" and even with the Magic Keyboard it's still only 1kg. It fits any *man purse* so it's really easy to carry around. And I can hold it with one hand effortlessly.
+* **It's multi-touch** so you can just browse, read and interact with things directly on the screen with your finger or fingers (multi-touch!).
+* **It's both portrait and landscape** as there's no right or wrong way to hold it. Just grab it and turn around and depending on the content, use either layouts.
+* **It's always ready** with a 10 hour battery life it's always ready to take out and work. No booting, no waiting, no charging throughout the day. Only 10% left? Still an hour to go!
+* **It's always online!** I recommend the cellular model as it's online all the time. And usually the LTE/4G connection is faster than any open WiFi around you. This way I could work on my book from anywhere and send my written chapters wirelessly.
+* **It's focused** as despite the split screen features and slide over, I usually work on *one app at the time* like I'm doing now writing this post. It helps me work very productively.
+* **It has a smaller sibling** as it shares its operating system with the iPhone, I have the same apps and can access the same resources on both devices. With an iPhone and an iPad it's like carrying two ultra-powerful and ultra-portable computers at a time!
+* **It has great apps** as the app ecosystem is a lot more mature after 10 years and most of *pro apps* are there and new ones are coming every day. Instead of visiting web sites I very often turn to their apps.
+
+All these arguments make it a delightful device to use. It's a computer I love to work on. It's just fun.
+
 ## But really, how was it that the iPad came to be?
 
 Now that you know the iPad is a joy to use and it does the job for me, if you're curious how it initially came to be, check out this video by my favorite vlogger, [Rene Ritchie](https://reneritchie.net).
