--- a/en/_posts/2020-07-22-new.md
+++ b/en/_posts/2020-07-22-new.md
@@ -40,7 +40,7 @@ So anyway, multi-language site it is and it brings me joy.
 
 ## Old content... will be migrated soon!
 
-For now I'm leaving [Sliwinski.com][s]{:target='_blank'} as is, but over the next few months I'll migrate all the content from there to here. In theory it's fairly easy as I've been writing in [Markdown][m]{:target='_blank'} for all these year and I keep writing like this in here. But still, these are more than 1000 posts and I want to migrate the content properly so it'll take me a little bit of time to get around to it.
+For now I'm leaving [Sliwinski.com][s]{:target='_blank'} as is, but over the next few months I'll migrate all the content from there to here. In theory it's fairly easy as I've been writing in [Markdown][m]{:target='_blank'} for all these years and I keep writing like this in here. But still, these are more than 1000 posts and I want to migrate the content properly so it'll take me a little bit of time to get around to it.
 
 Once stuff is migrated, I'll redirect all traffic from [sliwinski.com][s]{:target='_blank'} to here.
 
