April 2020 onwards imports sliwinski.com

--- a/en/_posts/2020-04-06-thepodcast-205.md
+++ b/en/_posts/2020-04-06-thepodcast-205.md
@@ -1,20 +1,20 @@
 ---
 tags: [podcast]
-img: "thepodcast-208.jpg"
+img: "thepodcast-205.jpg"
 ---
 
-# The Podcast #208 - Smart teams work from home
+# The Podcast #205 - Chat about: kaizen & performance
 
-Last week on [The Podcast][p] we discussed if the pandemic is gone and if everyone got back to working from their offices... or not really... and should we double down on what we believe - on working the “modern way”, with work-from-home option, with flexible hours, with trust vs control? Here’s our discussion:
+Last week on [The Podcast][p] we had a discussion like no other - we tried a different format - where we just casually chat about kaizen and performance of our team...
 
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 43 min):][e]
+### [Listen to the entire episode (~ 70 min):][e]
 
 <audio controls>
-<source src="https://files.nozbe.com/podcast/208.mp3" type="audio/mpeg">
+<source src="https://files.nozbe.com/podcast/205.mp3" type="audio/mpeg">
 </audio>
 
 **[Subscribe to The Podcast in Apple Podcasts][i]**, [Get RSS][rss], [YouTube][y]
@@ -25,7 +25,7 @@ Last week on [The Podcast][p] we discussed if the pandemic is gone and if everyo
 
 [y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
 [rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/208
+[e]: https://thepodcast.fm/episodes/205
 
 [p]: https://thepodcast.fm/
 [n]: https://nozbe.com/
