--- a/en/_posts/2020-05-29-thepodcast-207.md
+++ b/en/_posts/2020-05-29-thepodcast-207.md
@@ -1,20 +1,20 @@
 ---
 tags: [podcast]
-img: "thepodcast-208.jpg"
+img: "thepodcast-207.jpg"
 ---
 
-# The Podcast #208 - Smart teams work from home
+# The Podcast #207 - Competition Gossip Corner
 
-Last week on [The Podcast][p] we discussed if the pandemic is gone and if everyone got back to working from their offices... or not really... and should we double down on what we believe - on working the “modern way”, with work-from-home option, with flexible hours, with trust vs control? Here’s our discussion:
+This week on [The Podcast][p] we are gossiping we’re talking about our favorite competition (and inspiration!), [Basecamp](https://basecamp.com) guys pre-announcing a new version of their product for next year, and launching a new email service [HEY](https://hey.com) - we’re just wondering what it’s all about...
 
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### [Listen to the entire episode (~ 43 min):][e]
+### [Listen to the entire episode (~ 41 min):][e]
 
 <audio controls>
-<source src="https://files.nozbe.com/podcast/208.mp3" type="audio/mpeg">
+<source src="https://files.nozbe.com/podcast/207.mp3" type="audio/mpeg">
 </audio>
 
 **[Subscribe to The Podcast in Apple Podcasts][i]**, [Get RSS][rss], [YouTube][y]
@@ -25,7 +25,7 @@ Last week on [The Podcast][p] we discussed if the pandemic is gone and if everyo
 
 [y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
 [rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/208
+[e]: https://thepodcast.fm/episodes/207
 
 [p]: https://thepodcast.fm/
 [n]: https://nozbe.com/
