More imports of sliwinski.com and ama/two and missing posts

--- a/en/_posts/2020-04-20-magic.md
+++ b/en/_posts/2020-04-20-magic.md
@@ -1,9 +1,9 @@
 ---
-tags: [video,ipadonly]
+tags: [video,ipadonly,vlog]
 vid: "fkiQWB6J59I"
 ---
 
-# Magic Keyboard has arrived and it rocks and I made a video review of it!
+# Magic Keyboard review - Team Productivity Show 4
 
 Just today, ahead of schedule, I received the new Magic Keyboard for my beloved iPad Pro 11” and decided to record a short video about it. All edited with LumaFusion on, you guessed it, the same iPad Pro:
 
