--- a/en/_posts/2019-10-04-triwatch.md
+++ b/en/_posts/2019-10-04-triwatch.md
@@ -11,8 +11,6 @@ img: "triwatch.jpg"
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-
-
 ### The app "just works" for a triathlon race!
 
 It works the same way as the apps from Garmin and other "smart sports watch" manufacturers does - you start the app, choose a triathlon race, then you tap "open water swim" and it starts! Now after the swim you don't have to look at the watch much - you just **press the crown and the button below it at the same time** - it creates a screenshot and it moves from "swim" to "transition". After you've taken the bike, you press the two buttons again and it changes from "transition" to "bike". After the bike you do the same and in the end you have a nice triathlon result. It's all saved in your Health app. You can see my last week's results above.
@@ -21,9 +19,9 @@ It works the same way as the apps from Garmin and other "smart sports watch" man
 
 Well, I use [RunGap](https://www.rungap.com) to rule them all. This way every now and then I sync all my activities from all my apps and I have the stats and results in one place.
 
-I use [Strava](https://www.strava.com) for most of my longer bike rides or runs, but I don't treat it as a social network. You can find my there by I've set my privacy on pretty high and I only have a bunch of my closest friends following me there. I'm just not a show-off. Or at least I don't want to be.
+I use [Strava](https://www.strava.com) for most of my longer bike rides or runs, but I don't treat it as a social network. I've set my privacy on pretty high and I only have a bunch of my closest friends following me there. I'm just not a show-off. Or at least I don't want to be.
 
-When I'm doing shorter trainings I usually prefer to just use the Activity app on the [Apple Watch](/tag/AppleWatch) so that I don't inform everyone around what I just did. I like it this way.
+When I'm doing shorter trainings I usually prefer to just use the Activity app on the [Apple Watch](/tag/applewatch) so that I don't inform everyone around what I just did. I like it this way.
 
 ### And how was the battery life on the Apple Watch series 4 with cellular?
 
