--- a/en/_posts/2019-10-16-photo.md
+++ b/en/_posts/2019-10-16-photo.md
@@ -1,5 +1,5 @@
 ---
-tags: [life,productivity]
+tags: [iphone]
 img: "photo.jpg"
 ---
 
@@ -10,8 +10,6 @@ Tomorrow I’m finally going to unbox a new iPhone 11 Pro (non-Max - it’s too 
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.img }})
-
-
 
 ## You should never shoot against the sun... is a myth!
 
