fix link contact

--- a/en/_posts/2020-09-17-17.md
+++ b/en/_posts/2020-09-17-17.md
@@ -178,7 +178,7 @@ The vision is long but I felt like it couldn't be shorter if we are to embrace a
 * It shows how we work as a team.
 * It shows how these values are reflected in our products.
 
-Now that you've read it, please [email me or tweet me]](/contact) to let me know what you think! Don't be a stranger!
+Now that you've read it, please [email me or tweet me](/contact) to let me know what you think! Don't be a stranger!
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
