--- a/en/_posts/2020-10-01-uncle.md
+++ b/en/_posts/2020-10-01-uncle.md
@@ -41,7 +41,7 @@ So I changed my order and got the "Joker" cup. It was really good.
 
 ## What's the name of the restaurant?
 
-Now I'm in my [forties](/forty1) and I have three kids, but this lessons is still with me. Whenever we go out to a new restaurant the first thing I check is if they have a dish on the menu that is called by their name. Sometimes it's not there, but usually they have a salad or even a series of dishes that are named the same way as the restaurant.
+Now I'm in my [forties](/forty1) and I have three kids, but this lesson is still with me. Whenever we go out to a new restaurant the first thing I check is if they have a dish on the menu that is called by their name. Sometimes it's not there, but usually they have a salad or even a series of dishes that are named the same way as the restaurant.
 
 It's always what I order and it's usually the winning choice.
 
