--- a/en/_posts/2020-10-01-uncle.md
+++ b/en/_posts/2020-10-01-uncle.md
@@ -5,7 +5,7 @@ img: "uncle.jpg"
 
 # How my uncle taught me which ice cream or dish to choose from a menu of options?
 
-When I was a young teenager I visited the Warsaw old town with my parents and my uncle. It was a hot summer afternoon and I wanted an ice-cream so we sat down in a very fancy ice-cream shop and my uncle told me: “Michael, take a look at the menu and choose any ice-cream you want. I’m buying.” And I looked at the menu and couldn’t decide... and then I chose this:
+When I was a young teenager I visited the Warsaw old town with my parents and my uncle. It was a hot summer afternoon and I wanted an ice-cream so we sat down in a very fancy ice-cream shop and my uncle told me: “Michael, take a look at the menu and choose any ice-cream you want. I’m buying.” And I looked at the menu and couldn’t decide... and this is what happened:
 
 <!--More-->
 
