--- a/en/_posts/2019-09-05-again.md
+++ b/en/_posts/2019-09-05-again.md
@@ -11,13 +11,13 @@ I just maxed out my limit of [audiobooks](https://sliwinski.com/reading-audioboo
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-### Turns out I'm not so smart...
+## Turns out I'm not so smart...
 
 Out of all the books [I've been reading](https://sliwinski.com/reading) I discovered that some are really, really good. Like [Essentialism](https://sliwinski.com/essentialism) which I've read [three or four times already](https://sliwinski.com/essentialist) and now I'm reading again and I still find some new thoughts and nuggets of ideas... even though I should have known this content by heart by now... But as [Greg McKeown says](https://sliwinski.com/greg-mckeown), an essentialist life is not a goal that is ever completely reached - it's a pursuit... it's a journey...
 
 That's why as I'm reading more and more books I hopefully get smarter and wiser... and my mind gets different ideas... and is at different stages of evolution... that's why every time I'm reading the same good book, I keep learning something new and hopefully keep getting smarter...
 
-### Answers need questions first!
+## Answers need questions first!
 
 As [Clay Christensen once said](https://signalvnoise.com/posts/3225-what-are-questions):
 
@@ -25,7 +25,7 @@ As [Clay Christensen once said](https://signalvnoise.com/posts/3225-what-are-que
 
 That's why when reading these good books for the second or third time (or more) I am at different phase in my life and I have different questions or problems... and I find different answers.
 
-### Which books I recommend to read again?
+## Which books I recommend to read again?
 
 Your mileage may vary, so please just don't follow me blindly but if you really want to know, these are the 10 books I've been reading (or I'm planning to read) again recently:
 
