--- a/en/_posts/2019-04-18-sms.md
+++ b/en/_posts/2019-04-18-sms.md
@@ -5,7 +5,7 @@ img: "sms.jpg"
 
 # Challenge: social media sabbatical for a month
 
-Yesterday with Radek we recorded the 184th episode of [“The Podcast”][p] where we’ll be discussing Cal Newport’s new book - Digital Minimalism ([Amazon](https://www.amazon.com/dp/0525536515?tag=sliwinski-20)|[Audible](https://www.audible.com/pd/0241387779?tag=sliwinski-20)) - and the episode will air next week... but while recording Radek challenged me to do a fully-blown social media sabbatical (Twitter/Instagram/Facebook) for the next 30 days. No Twitter. No Instagram. No Facebook. No Social Media. And I accepted it! Here are the rules:
+Yesterday with Radek we recorded the 184th episode of [“The Podcast”][p] where we’ll be discussing Cal Newport’s new book - Digital Minimalism ([Amazon](https://www.amazon.com/dp/0525536515?tag=sliwinski-20) or [Audible](https://www.audible.com/pd/0241387779?tag=sliwinski-20)) - and the episode will air next week... but while recording Radek challenged me to do a fully-blown social media sabbatical (Twitter/Instagram/Facebook) for the next 30 days. No Twitter. No Instagram. No Facebook. No Social Media. And I accepted it! Here are the rules:
  
 <!--More-->
 
