--- a/en/_posts/2019-05-08-thepodcast-185.md
+++ b/en/_posts/2019-05-08-thepodcast-185.md
@@ -5,7 +5,7 @@ vid: "xxXAiS93jXI"
 
 # The Podcast #185 - Factfullness
 
-Last week on [The Podcast][p] we discussed the [book](https://sliwinski.com/reading) by Hans Rosling called “Factfullness” ([Amazon](https://www.amazon.com/dp/1250107814?tag=sliwinski-20)|[Audible](https://www.audible.com/pd/B07BFF5TQ6?tag=sliwinski-20)) and why the world is much better than we think. Check it out!
+Last week on [The Podcast][p] we discussed the [book](https://sliwinski.com/reading) by Hans Rosling called “Factfullness” ([Amazon](https://www.amazon.com/dp/1250107814?tag=sliwinski-20) or [Audible](https://www.audible.com/pd/B07BFF5TQ6?tag=sliwinski-20)) and why the world is much better than we think. Check it out!
 
 <!--More-->
 
