--- a/en/_posts/2019-04-30-thepodcast-184.md
+++ b/en/_posts/2019-04-30-thepodcast-184.md
@@ -5,7 +5,7 @@ vid: "TwRweSu8Sbg"
 
 # The Podcast #184 - Digital Minimalism
 
-Lasy week on [The Podcast][p] we discussed the book Digital Minimalism by Cal Newport ([Amazon](https://www.amazon.com/dp/0241341132?tag=sliwinski-20)|[Audible](https://www.audible.com/pd/0241387779?tag=sliwinski-20)) and Radek challenged me to [drop social media for a month](https://sliwinski.com/sms). Listen up: 
+Lasy week on [The Podcast][p] we discussed the book Digital Minimalism by Cal Newport ([Amazon](https://www.amazon.com/dp/0241341132?tag=sliwinski-20) or [Audible](https://www.audible.com/pd/0241387779?tag=sliwinski-20)) and Radek challenged me to [drop social media for a month](https://sliwinski.com/sms). Listen up: 
 
 <!--More-->
 
